--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="./styles.css" />
-    <title>Cash Register</title>
+    <title>Cash Register 💰</title>
 </head>
 <body>
 
@@ -15,17 +15,17 @@
             by the customer and know 
             minimum number of notes to return.</p>
         <label for="bill-amount">Bill Amount:</label>
-        <input id="bill-amount" type="text" />
+        <input id="bill-amount" type="number" min="0">
         <label for="cash-given">Cash Given:</label>
-        <input  id="cash-given" type="text" />
+        <input  id="cash-given" type="number" min="0">
         <button id="check-button">Check</button>
         <p id="error-message"></p>
         <table class="change-table">
             <caption>
-                Return Change
+                Minimum number of notes to Return
             </caption>
             <tr>
-                <th class="table-heading">No of Notes</th>
+                <th>Number of notes</th>
                 <td class="no-of-notes"></td>
                 <td class="no-of-notes"></td>
                 <td class="no-of-notes"></td>
@@ -35,7 +35,7 @@
                 <td class="no-of-notes"></td>
             </tr>
             <tr>
-                <th class="table-heading">Notes</th>
+                <th> Notes Available </th>
                 <td>2000</td>
                 <td>500</td>
                 <td>100</td>
